--- a/FIASUpdate/packages.config
+++ b/FIASUpdate/packages.config
@@ -1,52 +1,57 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Azure.Core" version="1.40.0" targetFramework="net472" />
-  <package id="Azure.Identity" version="1.12.0" targetFramework="net472" />
+  <package id="Azure.Core" version="1.45.0" targetFramework="net472" />
+  <package id="Azure.Identity" version="1.13.2" targetFramework="net472" />
   <package id="DataConnectionDialog" version="1.2" targetFramework="net472" />
-  <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="9.0.2" targetFramework="net472" />
+  <package id="Microsoft.Bcl.Memory" version="9.0.2" targetFramework="net472" />
+  <package id="Microsoft.Bcl.TimeProvider" version="9.0.2" targetFramework="net472" />
   <package id="Microsoft.Data.SqlClient" version="5.0.2" allowedVersions="(,5.0.2]" targetFramework="net472" />
   <package id="Microsoft.Data.SqlClient.SNI" version="5.0.1" allowedVersions="(,5.0.1]" targetFramework="net472" />
-  <package id="Microsoft.Identity.Client" version="4.61.3" targetFramework="net472" />
-  <package id="Microsoft.Identity.Client.Extensions.Msal" version="4.61.3" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.Abstractions" version="7.6.2" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.JsonWebTokens" version="7.6.2" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.Logging" version="7.6.2" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.Protocols" version="7.6.2" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.Protocols.OpenIdConnect" version="7.6.2" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.Tokens" version="7.6.2" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="9.0.2" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="9.0.2" targetFramework="net472" />
+  <package id="Microsoft.Identity.Client" version="4.68.0" targetFramework="net472" />
+  <package id="Microsoft.Identity.Client.Extensions.Msal" version="4.68.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Abstractions" version="8.5.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.JsonWebTokens" version="8.5.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Logging" version="8.5.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Protocols" version="8.5.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Protocols.OpenIdConnect" version="8.5.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Tokens" version="8.5.0" targetFramework="net472" />
   <package id="Microsoft.SqlServer.Assessment" version="1.1.17" targetFramework="net472" />
   <package id="Microsoft.SqlServer.Assessment.Authoring" version="1.1.0" targetFramework="net472" />
   <package id="Microsoft.SqlServer.SqlManagementObjects" version="170.13.0" targetFramework="net472" />
   <package id="Microsoft-WindowsAPICodePack-Core" version="1.1.5" targetFramework="net472" />
   <package id="Microsoft-WindowsAPICodePack-Shell" version="1.1.5" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net472" />
-  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
-  <package id="System.ClientModel" version="1.0.0" targetFramework="net472" />
-  <package id="System.Configuration.ConfigurationManager" version="8.0.0" targetFramework="net472" />
-  <package id="System.Diagnostics.DiagnosticSource" version="8.0.1" targetFramework="net472" />
-  <package id="System.IdentityModel.Tokens.Jwt" version="7.6.2" targetFramework="net472" />
+  <package id="System.Buffers" version="4.6.0" targetFramework="net472" />
+  <package id="System.ClientModel" version="1.3.0" targetFramework="net472" />
+  <package id="System.Configuration.ConfigurationManager" version="9.0.2" targetFramework="net472" />
+  <package id="System.Diagnostics.DiagnosticSource" version="9.0.2" targetFramework="net472" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="8.5.0" targetFramework="net472" />
   <package id="System.IO" version="4.3.0" targetFramework="net472" />
   <package id="System.IO.FileSystem.AccessControl" version="5.0.0" targetFramework="net472" />
-  <package id="System.Memory" version="4.5.5" targetFramework="net472" />
-  <package id="System.Memory.Data" version="8.0.0" targetFramework="net472" />
+  <package id="System.IO.Pipelines" version="9.0.2" targetFramework="net472" />
+  <package id="System.Memory" version="4.6.0" targetFramework="net472" />
+  <package id="System.Memory.Data" version="9.0.2" targetFramework="net472" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="net472" />
-  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.6.0" targetFramework="net472" />
   <package id="System.Runtime" version="4.3.1" targetFramework="net472" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.1.0" targetFramework="net472" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net472" />
   <package id="System.Security.AccessControl" version="6.0.1" targetFramework="net472" />
   <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net472" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net472" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net472" />
-  <package id="System.Security.Cryptography.ProtectedData" version="8.0.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.ProtectedData" version="9.0.2" targetFramework="net472" />
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net472" />
-  <package id="System.Security.Permissions" version="8.0.0" targetFramework="net472" />
+  <package id="System.Security.Permissions" version="9.0.2" targetFramework="net472" />
   <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net472" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="net472" />
-  <package id="System.Text.Encodings.Web" version="8.0.0" targetFramework="net472" />
-  <package id="System.Text.Json" version="8.0.3" targetFramework="net472" />
-  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
+  <package id="System.Text.Encodings.Web" version="9.0.2" targetFramework="net472" />
+  <package id="System.Text.Json" version="9.0.2" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.6.0" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
-  <package id="Virenbar.JANL" version="2.5.1" targetFramework="net472" />
-  <package id="Virenbar.JANL.WinForms" version="2.5.1" targetFramework="net472" />
+  <package id="Virenbar.JANL" version="2.6.2" targetFramework="net472" />
+  <package id="Virenbar.JANL.WinForms" version="2.6.2" targetFramework="net472" />
 </packages>
